Fixed Styling on NavbarMobileView + Pagination Issues with Mobile View are corrected + Service styling modified for additional spacing

--- a/portfolio/src/Components/Career/Career.css
+++ b/portfolio/src/Components/Career/Career.css
@@ -1,5 +1,7 @@
 .career{
-    height:1000px;
+    height:auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .post-card{
