--- a/portfolio/src/Components/Pagination/Pagination.css
+++ b/portfolio/src/Components/Pagination/Pagination.css
@@ -7,6 +7,7 @@
     margin:10px;
 
 }
+
 .pagination a{
     text-decoration: none;
     list-style: none;
@@ -109,4 +110,33 @@
     -webkit-box-shadow: 5px 5px 8px 2px rgba(0,0,0,0.34); 
     -moz-box-shadow: -13px 4px 8px 2px rgba(0,0,0,0.56); 
     box-shadow: 5px 5px 8px 2px rgba(0,0,0,0.34);
+}
+
+@media (max-width:1000px){
+    .pagination-design {
+        margin: 5px;
+        padding: 7px;
+        height: 40px;
+        width:15px;
+        border-radius: 30px;
+
+    }
+    .pagination-design a:hover{
+        background-color: black;
+        margin: 5px;
+        padding: 7px;
+        color: white;
+        height: 40px;
+        width:20px;
+        border-radius: 30px;
+        border: 1px solid black;
+
+    }
+    .pagination-details{
+        overflow-x: scroll;
+    }
+    ::-webkit-scrollbar-thumb{
+        background-color:  #2751d9;
+        border-radius: 5px;
+      }
 }
