--- a/portfolio/src/Components/Service/Service.css
+++ b/portfolio/src/Components/Service/Service.css
@@ -10,7 +10,7 @@
     text-align: center;
 }
 .services{
-    margin-top: 20px;
+    margin-top: 40px;
     color:black;
     padding:10px;
     -webkit-box-shadow: 5px 5px 8px 2px rgba(0,0,0,0.34); 
